修改部分参数

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>基于阿里云OSS存储的图床</title>
+    <title>基于七牛云存储的图床</title>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <!--<script th:src="@{/js/jquery-3.3.1.js}"></script>-->
     <style>
